# hypermodern-python

./: .coverage  .flake8  README.md  mypy.ini  noxfile.py  pyproject.toml
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _warnings.data.json  _warnings.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  dataclasses.data.json  dataclasses.meta.json  datetime.data.json  datetime.meta.json  enum.data.json  enum.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  noxfile.meta.json  posix.data.json  posix.meta.json  socket.data.json  socket.meta.json  ssl.data.json  ssl.meta.json  string.data.json  string.meta.json  sys.data.json  sys.meta.json  tempfile.data.json  tempfile.meta.json  textwrap.data.json  textwrap.meta.json  threading.data.json  (+13 more)
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  copy.data.json  copy.meta.json  dataclasses.data.json  dataclasses.meta.json  datetime.data.json  datetime.meta.json  enum.data.json  enum.meta.json  functools.data.json  io.data.json  (+48 more)
.pytype/: .ninja_log  build.ninja
docs/: conf.py  index.rst
tests/: test_console.py  test_wikipedia.py
(+307 files in other folders)
